--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,12 @@ filelock==3.18.0
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
-hdbscan==0.8.40
+hdbscan==0.8.33
 hf-xet==1.1.3
 huggingface-hub==0.32.4
 idna==3.10
 Jinja2==3.1.6
-joblib==1.5.1
+joblib==1.3.2
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 llvmlite==0.44.0
@@ -23,13 +23,13 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 narwhals==1.41.0
 networkx==3.5
-nltk==3.9.1
+nltk==3.8.1
 numba==0.61.2
-numpy==2.2.6
+numpy>=1.24.3
 packaging==24.2
-pandas==2.2.3
+pandas>=2.0.3
 pillow==11.2.1
-plotly==6.1.2
+plotly>=5.18.0
 protobuf==6.31.1
 pyarrow==20.0.0
 pydeck==0.9.1
@@ -42,23 +42,23 @@ regex==2024.11.6
 requests==2.32.3
 rpds-py==0.25.1
 safetensors==0.5.3
-scikit-learn==1.6.1
+scikit-learn>=1.3.0
 scipy==1.15.3
-sentence-transformers==4.1.0
+sentence-transformers>=2.2.2
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
-streamlit==1.45.1
+streamlit>=1.31.0
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.7.0
+torch>=2.0.0
 tornado==6.5.1
 tqdm==4.67.1
 transformers==4.52.4
 typing_extensions==4.14.0
 tzdata==2025.2
-umap-learn==0.5.7
+umap-learn>=0.5.5
 urllib3==2.4.0
