--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ filelock==3.18.0
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
-hdbscan==0.8.33
+hdbscan
 hf-xet==1.1.3
 huggingface-hub==0.32.4
 idna==3.10
@@ -57,7 +57,7 @@ toml==0.10.2
 torch>=2.0.0
 tornado==6.5.1
 tqdm==4.67.1
-transformers==4.52.4
+transformers>=4.52.4
 typing_extensions==4.14.0
 tzdata==2025.2
 umap-learn>=0.5.5
